force-app/main/default/objects/CompetitorDataDetail__c/CompetitorDataDetail__c.object-meta.xml
<CustomObject>
    <label>Competitor Data Detail</label>
    <nameField>
        <displayFormat>CDD - {000000}</displayFormat>
        <label>Competitor Data Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Data Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>