force-app/main/default/objects/CompetitorDataDetail__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abell</fullName>
            </value>
            <value>
                <fullName>Bio-Chem</fullName>
            </value>
            <value>
                <fullName>Cameron</fullName>
            </value>
            <value>
                <fullName>Canadian Linen</fullName>
            </value>
            <value>
                <fullName>Cannon</fullName>
            </value>
            <value>
                <fullName>Cintas</fullName>
            </value>
            <value>
                <fullName>Diversy</fullName>
            </value>
            <value>
                <fullName>Ecolab</fullName>
            </value>
            <value>
                <fullName>GK</fullName>
            </value>
            <value>
                <fullName>Magical Pest Control</fullName>
            </value>
            <value>
                <fullName>Maheu-Maheu</fullName>
            </value>
            <value>
                <fullName>Orkin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Regionex</fullName>
            </value>
            <value>
                <fullName>Rentokill</fullName>
            </value>
            <value>
                <fullName>Rochester Midland</fullName>
            </value>
            <value>
                <fullName>Roy Turk</fullName>
            </value>
            <value>
                <fullName>Sani-Service</fullName>
            </value>
            <value>
                <fullName>Sani Sol</fullName>
            </value>
            <value>
                <fullName>Steritech</fullName>
            </value>
            <value>
                <fullName>Swish</fullName>
            </value>
            <value>
                <fullName>Terminex</fullName>
            </value>
            <value>
                <fullName>Unifirst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>