force-app/main/default/objects/CompetitorDataDetail__c/fields/CompetitorData__c.field-meta.xml
<CustomField>
    <fullName>CompetitorData__c</fullName>
    <label>Competitor Data</label>
    <referenceTo>CompetitorData__c</referenceTo>
    <relationshipLabel>Competitor Data Details</relationshipLabel>
    <relationshipName>Landscape_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>