force-app/main/default/objects/CompetitorDataDetail__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aircare</fullName>
            </value>
            <value>
                <fullName>Floorcare</fullName>
            </value>
            <value>
                <fullName>Air Purification</fullName>
            </value>
            <value>
                <fullName>Disinfection and Sanitisation</fullName>
            </value>
            <value>
                <fullName>General Washroom Services</fullName>
            </value>
            <value>
                <fullName>Hand &amp; Surface Sanitising</fullName>
            </value>
            <value>
                <fullName>Hand Drying</fullName>
            </value>
            <value>
                <fullName>Infant Care</fullName>
            </value>
            <value>
                <fullName>Personal Hygiene Disposal</fullName>
            </value>
            <value>
                <fullName>PPE Waste Disposal</fullName>
            </value>
            <value>
                <fullName>Sharps &amp; Dental</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
            <value>
                <fullName>Water Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>