force-app/main/default/objects/CompetitorDataDetail__c/fields/Service_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Service_Annual_Revenue__c</fullName>
    <label>Service Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>