force-app/main/default/objects/CompetitorDataDetail__c/fields/Service_Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Renewal_Date__c</fullName>
    <label>Service Contract Renewal Date</label>
    <type>Date</type>
</CustomField>